[gd_scene load_steps=21 format=3 uid="uid://bg134wv0ambwf"]

[ext_resource type="Script" path="res://scripts/tutorial.gd" id="1_b460k"]
[ext_resource type="PackedScene" uid="uid://cj0rq7v6uoleq" path="res://assets/models/tutorial.blend" id="1_sngt4"]
[ext_resource type="Shader" path="res://scripts/grass.gdshader" id="2_qfgj6"]
[ext_resource type="Material" uid="uid://bfyonuchfxqh3" path="res://assets/road.tres" id="3_ylff6"]
[ext_resource type="Shader" path="res://scripts/water.gdshader" id="4_8ahkc"]
[ext_resource type="PackedScene" uid="uid://biuba22ol7yd5" path="res://scenes/kart.tscn" id="5_4i52m"]
[ext_resource type="PackedScene" uid="uid://bwsgksn5sba8h" path="res://scenes/aiKart.tscn" id="6_3wjir"]
[ext_resource type="Theme" uid="uid://dx6m21m2e8ni0" path="res://assets/normal.tres" id="7_6521h"]
[ext_resource type="Texture2D" uid="uid://b1buc1ead6rsb" path="res://assets/sprite/lowerButton.png" id="9_ej2f3"]
[ext_resource type="Texture2D" uid="uid://cqeq2jcoq8eno" path="res://assets/sprite/leftMouse.png" id="10_6qasc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2unpy"]
render_priority = 0
shader = ExtResource("2_qfgj6")
shader_parameter/albedo = Color(0.265833, 0.55, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ky0ul"]
render_priority = 0
shader = ExtResource("2_qfgj6")
shader_parameter/albedo = Color(1, 0.918, 0.18, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_ubkhh"]
size = Vector2(3000, 3000)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vbrst"]
render_priority = 0
shader = ExtResource("4_8ahkc")
shader_parameter/cell_amount = 40
shader_parameter/period = Vector2(5, 10)
shader_parameter/albedo = Color(0, 0.833333, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fojho"]
albedo_color = Color(1, 1, 0.29, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cidgi"]
sky_top_color = Color(0.19, 0.811, 1, 1)
sky_horizon_color = Color(0.8, 0.876667, 1, 1)
sky_curve = 0.0955921
ground_bottom_color = Color(0.06, 0.06, 0.06, 1)
ground_horizon_color = Color(0.2542, 0.394423, 0.62, 1)
ground_energy_multiplier = 1.79
sun_curve = 48410.7

[sub_resource type="Sky" id="Sky_euqx2"]
sky_material = SubResource("ProceduralSkyMaterial_cidgi")

[sub_resource type="Environment" id="Environment_ysu0v"]
background_mode = 2
sky = SubResource("Sky_euqx2")
glow_enabled = true
glow_intensity = 0.28
glow_bloom = 0.08
glow_hdr_threshold = 0.24
fog_light_color = Color(0.85, 0.98, 1, 1)
fog_light_energy = 0.49
fog_density = 0.0
adjustment_enabled = true
adjustment_brightness = 1.17
adjustment_contrast = 1.17
adjustment_saturation = 1.17

[sub_resource type="Curve3D" id="Curve3D_kt6cw"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -36.0565, 0, 9.89034, 0, 0, 0, 0, 0, 0, -28.9263, 0, -25.9909, 0, 0, 0, 0, 0, 0, -9.14559, 0, -38.4113, 0, 0, 0, 0, 0, 0, 13.6252, 0, -37.0313, 0, 0, 0, 0, 0, 0, 32.2558, 0, -26.2209, 0, 0, 0, 0, 0, 0, 37.316, 0, -4.83017, 0, 0, 0, 0, 0, 0, 30.8758, 0, 18.8606, 0, 0, 0, 0, 0, 0, 16.6153, 0, 35.1912, 0, 0, 0, 0, 0, 0, -15.1258, 0, 36.8013, 0, 0, 0, 0, 0, 0, -36.0565, 0, 9.89034),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 10

[sub_resource type="LabelSettings" id="LabelSettings_j7edo"]
font_size = 128
outline_size = 24
outline_color = Color(0, 0, 0, 1)

[node name="Tutorial" type="Node3D" node_paths=PackedStringArray("ai", "player")]
script = ExtResource("1_b460k")
ai = NodePath("Kart2")
player = NodePath("Kart")

[node name="tutorial" parent="." instance=ExtResource("1_sngt4")]

[node name="Cylinder" parent="tutorial" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_2unpy")

[node name="StaticBody3D" parent="tutorial/Cylinder" index="0"]
collision_layer = 3

[node name="BezierCircle" parent="tutorial" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.744368, 0)
surface_material_override/0 = ExtResource("3_ylff6")

[node name="sand" parent="tutorial" index="2"]
surface_material_override/0 = SubResource("ShaderMaterial_ky0ul")

[node name="ocean" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.65087, 0)
mesh = SubResource("PlaneMesh_ubkhh")
surface_material_override/0 = SubResource("ShaderMaterial_vbrst")

[node name="ocean2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.38951, 0)
mesh = SubResource("PlaneMesh_ubkhh")
surface_material_override/0 = SubResource("StandardMaterial3D_fojho")

[node name="Kart" parent="." instance=ExtResource("5_4i52m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.5243, 3.03733, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ysu0v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.91212, 0.409923, 0, 0.369341, -0.821821, 0.433816, 0.177831, -0.395693, -0.901001, 0, 8.69589, 0)

[node name="Kart2" parent="." node_paths=PackedStringArray("path") instance=ExtResource("6_3wjir")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.501, 2.14408, -16.2985)
path = NodePath("../MiniPath")
speed = 60.0

[node name="MiniPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_kt6cw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_6521h")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "W"
label_settings = SubResource("LabelSettings_j7edo")

[node name="PunchIndicatorController" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_ej2f3")

[node name="PunchIndicatorMouse" type="TextureRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_6qasc")

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="FinishTimer" to="." method="_on_finish_timer_timeout"]

[editable path="tutorial"]
